# fishminder

./: Makefile.am  README.md  configure.ac  fishminderd.conf
certs/: README
doc/man1/: fminder.1
doc/man8/: fishminderd.8
sqlite/: README  sqlite_schema.sql
src/daemon/: Makefile  cmd_line_listener.c  cmd_line_listener.h  credentialmgr.c  credentialmgr.h  listener.c  listener.h  rfeventrec.h  subscriptionmgr.c  subscriptionmgr.h
src/utils/: Makefile  client.c
